--- a/services/guardianships.html
+++ b/services/guardianships.html
@@ -1211,7 +1211,407 @@
                 padding: 2rem;
             }
         }
-    </style>
+    
+        /* ===== LEGAL POLISH OVERRIDES ===== */
+        :root {
+            --surface-paper: #FFFFFF;
+            --surface-cream: #F7F6F1;
+            --surface-warm: #F1EEE6;
+            --line-soft: rgba(38, 37, 31, 0.08);
+            --line-strong: rgba(38, 37, 31, 0.18);
+            --line-warm: rgba(229, 172, 72, 0.3);
+            --glow-warm: rgba(229, 172, 72, 0.22);
+            --shadow-legal-soft: 0 14px 30px rgba(38, 37, 31, 0.14), 0 4px 10px rgba(38, 37, 31, 0.1);
+            --shadow-legal: 0 22px 55px rgba(38, 37, 31, 0.2), 0 10px 24px rgba(38, 37, 31, 0.12);
+            --shadow-legal-heavy: 0 36px 90px rgba(38, 37, 31, 0.25), 0 16px 30px rgba(38, 37, 31, 0.14);
+            --radius-xl: 32px;
+            --radius-lg: 24px;
+            --radius-md: 16px;
+            --radius-sm: 12px;
+        }
+
+        body {
+            background-image:
+                radial-gradient(1200px 700px at 8% -15%, rgba(229, 172, 72, 0.16), transparent 62%),
+                radial-gradient(900px 600px at 92% 12%, rgba(38, 37, 31, 0.08), transparent 62%),
+                repeating-linear-gradient(90deg, rgba(38, 37, 31, 0.035) 0, rgba(38, 37, 31, 0.035) 1px, transparent 1px, transparent 80px),
+                linear-gradient(180deg, #fbfaf7 0%, var(--surface-cream) 100%);
+        }
+
+        .header {
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0.98), rgba(247, 246, 241, 0.92));
+            border-bottom: 1px solid var(--line-soft);
+            box-shadow: 0 16px 35px rgba(38, 37, 31, 0.1);
+        }
+
+        .header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 3px;
+            background: linear-gradient(90deg, transparent, rgba(229, 172, 72, 0.6), transparent);
+            opacity: 0.8;
+            pointer-events: none;
+        }
+
+        .header.scrolled {
+            background: rgba(255, 255, 255, 0.98);
+            box-shadow: 0 18px 40px rgba(38, 37, 31, 0.12);
+        }
+
+        .nav {
+            padding: 1rem 0;
+        }
+
+        .nav-link {
+            font-size: 0.85rem;
+            letter-spacing: 0.08em;
+            border: 1px solid transparent;
+            background: rgba(255, 255, 255, 0);
+            transition:
+                color 0.25s ease,
+                transform 0.25s var(--ease-out-expo, cubic-bezier(0.16, 1, 0.3, 1)),
+                background 0.25s ease,
+                border-color 0.25s ease,
+                box-shadow 0.25s ease;
+        }
+
+        .nav-link::after {
+            height: 2px;
+            bottom: 6px;
+            width: calc(100% - 1.2rem);
+        }
+
+        .nav-link:hover {
+            background: linear-gradient(180deg, rgba(229, 172, 72, 0.18), rgba(229, 172, 72, 0.05));
+            border-color: rgba(229, 172, 72, 0.25);
+            box-shadow: 0 10px 20px rgba(38, 37, 31, 0.08);
+            transform: translateY(-1px);
+        }
+
+        .nav-cta,
+        .nav-message-cta,
+        .nav-phone-cta {
+            border: 1px solid rgba(229, 172, 72, 0.25);
+            box-shadow: var(--shadow-legal-soft);
+        }
+
+        .nav-cta:hover,
+        .nav-message-cta:hover,
+        .nav-phone-cta:hover {
+            transform: translateY(-3px);
+            box-shadow: var(--shadow-legal);
+        }
+
+        .nav-phone-ring {
+            opacity: 0.7;
+        }
+
+        .btn {
+            letter-spacing: 0.06em;
+            font-weight: 600;
+            border: 1px solid transparent;
+        }
+
+        .btn-primary {
+            border: 1px solid rgba(229, 172, 72, 0.35);
+            box-shadow: var(--shadow-legal-soft);
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-3px);
+            box-shadow: var(--shadow-legal);
+        }
+
+        .btn-outline,
+        .btn-outline-white {
+            border-width: 1px;
+            border-color: var(--line-strong);
+            background: rgba(255, 255, 255, 0.95);
+        }
+
+        .btn-outline:hover,
+        .btn-outline-white:hover {
+            border-color: rgba(229, 172, 72, 0.45);
+            box-shadow: var(--shadow-legal);
+        }
+
+        .btn-white {
+            box-shadow: var(--shadow-legal-soft);
+        }
+
+        .btn-white:hover {
+            box-shadow: var(--shadow-legal);
+        }
+
+        .hero {
+            box-shadow: inset 0 -1px 0 var(--line-soft);
+        }
+
+        .hero::before {
+            opacity: 1;
+            filter: saturate(120%);
+        }
+
+        .hero::after {
+            opacity: 0.95;
+        }
+
+        .hero-text h1 {
+            letter-spacing: -0.02em;
+            text-shadow: 0 12px 30px rgba(38, 37, 31, 0.18);
+        }
+
+        .hero-text .lead {
+            font-weight: 400;
+        }
+
+        .hero-card {
+            border: 1px solid rgba(38, 37, 31, 0.08);
+            box-shadow: var(--shadow-legal);
+        }
+
+        .section-header::before {
+            height: 3px;
+            width: 96px;
+        }
+
+        .section-header::after {
+            content: '';
+            display: block;
+            width: 12px;
+            height: 12px;
+            margin: 1.5rem auto 0;
+            background: var(--warm);
+            transform: rotate(45deg);
+            box-shadow: 0 0 0 8px rgba(229, 172, 72, 0.16);
+        }
+
+        .section-header h2 {
+            font-weight: 600;
+            letter-spacing: -0.015em;
+        }
+
+        .section-header p {
+            font-size: 1.1rem;
+        }
+
+        .services,
+        .story,
+        .blog,
+        .testimonials,
+        .section,
+        .cta-section,
+        .contact-section,
+        .blog-article {
+            border-top: 1px solid var(--line-soft);
+        }
+
+        .section,
+        .section-white,
+        .section-cream {
+            position: relative;
+        }
+
+        .section::before,
+        .section-white::before,
+        .section-cream::before {
+            content: '';
+            position: absolute;
+            pointer-events: none;
+            top: 0;
+            left: 8%;
+            right: 8%;
+            height: 1px;
+            background: linear-gradient(90deg, transparent, var(--line-warm), transparent);
+            opacity: 0.9;
+        }
+
+        .service-card,
+        .blog-card,
+        .testimonial-card,
+        .office-card,
+        .contact-card {
+            border-radius: var(--radius-xl);
+            border: 1px solid var(--line-soft);
+            box-shadow: var(--shadow-legal-soft);
+            background: linear-gradient(180deg, var(--surface-paper) 0%, #fcfbf7 100%);
+        }
+
+        .service-card,
+        .blog-card,
+        .testimonial-card,
+        .office-card,
+        .contact-card {
+            position: relative;
+            transition:
+                transform 0.45s var(--ease-out-expo, cubic-bezier(0.16, 1, 0.3, 1)),
+                box-shadow 0.45s var(--ease-out-expo, cubic-bezier(0.16, 1, 0.3, 1)),
+                border-color 0.3s ease;
+        }
+
+        .service-card::after,
+        .blog-card::after,
+        .testimonial-card::after,
+        .office-card::after,
+        .contact-card::after {
+            content: '';
+            position: absolute;
+            inset: 0;
+            border-radius: inherit;
+            border: 1px solid rgba(229, 172, 72, 0.35);
+            opacity: 0;
+            transition: opacity 0.35s ease;
+            pointer-events: none;
+        }
+
+        @media (hover: hover) and (pointer: fine) {
+            .service-card-link:hover .service-card,
+            .blog-card:hover,
+            .testimonial-card:hover,
+            .office-card:hover,
+            .contact-card:hover {
+                transform: translateY(-12px) scale(1.01);
+                border-color: rgba(229, 172, 72, 0.35);
+                box-shadow: var(--shadow-legal-heavy);
+            }
+
+            .service-card-link:hover .service-card::after,
+            .blog-card:hover::after,
+            .testimonial-card:hover::after,
+            .office-card:hover::after,
+            .contact-card:hover::after {
+                opacity: 1;
+            }
+
+            .service-card-link:hover .service-card-image img {
+                transform: scale(1.06);
+                filter: saturate(1.05);
+            }
+
+            .service-card-link:hover .service-icon {
+                transform: translateY(-4px) scale(1.05);
+            }
+        }
+
+        .blog-card-content {
+            border-top: 1px solid rgba(229, 172, 72, 0.12);
+        }
+
+        .article-header,
+        .article-content {
+            border: 1px solid var(--line-soft);
+            box-shadow: var(--shadow-legal-soft);
+            background: linear-gradient(180deg, rgba(255, 255, 255, 0.96), rgba(252, 251, 247, 0.98));
+        }
+
+        .article-header {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .article-header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, transparent, rgba(229, 172, 72, 0.6), transparent);
+        }
+
+        .article-title {
+            text-shadow: 0 10px 22px rgba(38, 37, 31, 0.16);
+        }
+
+        .article-category {
+            letter-spacing: 0.12em;
+            box-shadow: var(--shadow-legal-soft);
+        }
+
+        .article-content {
+            box-shadow: var(--shadow-legal);
+        }
+
+        .article-content p:first-of-type::first-letter {
+            font-family: var(--font-heading);
+            font-size: 3.4em;
+            float: left;
+            line-height: 0.8;
+            margin: 0.1em 0.15em 0 0;
+            color: var(--warm);
+            font-weight: 600;
+        }
+
+        .article-content blockquote {
+            border-left-color: rgba(229, 172, 72, 0.5);
+            box-shadow: inset 0 0 0 1px rgba(229, 172, 72, 0.15);
+        }
+
+        .contact-form .form-group input,
+        .contact-form .form-group textarea,
+        .contact-form .form-group select {
+            border: 1px solid var(--line-soft);
+            box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8);
+        }
+
+        .contact-form .form-group input:focus,
+        .contact-form .form-group textarea:focus,
+        .contact-form .form-group select:focus {
+            border-color: rgba(229, 172, 72, 0.55);
+            box-shadow: 0 0 0 4px rgba(229, 172, 72, 0.18);
+        }
+
+        .floating-cta,
+        .scroll-top,
+        .scroll-to-top {
+            border: 1px solid var(--line-warm);
+            box-shadow: var(--shadow-legal-soft);
+        }
+
+        .floating-cta:hover,
+        .scroll-top:hover,
+        .scroll-to-top:hover {
+            transform: translateY(-6px) scale(1.02);
+            box-shadow: var(--shadow-legal);
+        }
+
+        @media (max-width: 900px) {
+            .nav-link {
+                font-size: 0.9rem;
+                letter-spacing: 0.05em;
+            }
+
+            .section-header::after {
+                margin-top: 1.25rem;
+            }
+        }
+
+        @media (max-width: 600px) {
+            .nav-menu {
+                border-right: 1px solid var(--line-soft);
+                background: linear-gradient(180deg, rgba(255, 255, 255, 0.98), rgba(247, 246, 241, 0.92));
+                box-shadow: 0 20px 45px rgba(38, 37, 31, 0.16);
+            }
+
+            .nav-backdrop {
+                backdrop-filter: blur(4px);
+            }
+
+            .service-card,
+            .blog-card,
+            .testimonial-card,
+            .office-card,
+            .contact-card {
+                border-radius: var(--radius-lg);
+            }
+        }
+
+        /* ===== END LEGAL POLISH OVERRIDES ===== */
+
+</style>
 </head>
 <body>
     <!-- Scroll Progress Indicator -->
